# projecteuler-rust

./: .travis.yml  Cargo.toml  README.md
benches/: bench.rs
src/: main.rs  problem1.rs  problem2.rs  problem3.rs  problem4.rs  problem5.rs  problem6.rs
